<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingConstraints"
    android:gravity="center">

    <Button
        android:id="@+id/botonJugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="7dp"
        android:text="@string/Jugar"
        android:onClick="ejecutarJuego" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/botonAnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:width="50dp"
            android:height="40dp"
            android:layout_marginBottom="7dp"
            android:text="@string/anterior"
            android:onClick="anterior"/>

        <TextView
            android:id="@+id/vistaModo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:width="170dp"
            android:height="40dp"
            android:layout_marginBottom="7dp"
            android:background="#d0d0d0"/>

        <Button
            android:id="@+id/botonSig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:width="50dp"
            android:height="40dp"
            android:layout_marginBottom="7dp"
            android:text="@string/siguiente"
            android:onClick="siguiente"/>

    </LinearLayout>



    <Button
        android:id="@+id/botonConfiguracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="7dp"
        android:text="@string/Configuracion"
        android:onClick="ejecutarOpciones"/>

    <Button
        android:id="@+id/botonRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="7dp"
        android:text="@string/Ranking"
        android:onClick="ejecutarRanking"/>

    <Button
        android:id="@+id/botonSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginBottom="7dp"
        android:text="@string/Salir"
        android:onClick="ejecutarSalir"/>

</LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
